<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="160dp"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/img_heart"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/ic_heart"
        app:srcCompat="@drawable/ic_heart" />
    <EditText
        android:id="@+id/ed_firstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/first_name"
        android:inputType="text">
    </EditText>
    <EditText
        android:id="@+id/ed_secondName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/second_name"
        android:inputType="text">

    </EditText>

    <Button
        android:id="@+id/btn_calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calculate">

    </Button>


</LinearLayout>